[gd_scene load_steps=6 format=3 uid="uid://bpis8skquuip5"]

[ext_resource type="Script" path="res://Scripts/crate.gd" id="1_lns2j"]
[ext_resource type="Texture2D" uid="uid://bh1jul4jbpiym" path="res://Sprites/crate.png" id="1_lxe2t"]
[ext_resource type="Texture2D" uid="uid://e0g7q6wjr1w1" path="res://Sprites/crate falling.png" id="3_qoxga"]
[ext_resource type="Texture2D" uid="uid://dexy76dl8dsxd" path="res://Sprites/shadow.png" id="4_vdlnr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jonbb"]
size = Vector2(22, 22)

[node name="Area2D" type="Area2D" groups=["destroy"]]
y_sort_enabled = true
use_parent_material = true
collision_layer = 32
collision_mask = 2
script = ExtResource("1_lns2j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jonbb")

[node name="CrateSprite" type="Sprite2D" parent="."]
visible = false
use_parent_material = true
texture = ExtResource("1_lxe2t")

[node name="FallingSprite" type="Sprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -10)
texture = ExtResource("3_qoxga")
offset = Vector2(0.5, -1.5)

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
z_index = -1
position = Vector2(0, 9.5)
texture = ExtResource("4_vdlnr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
